assignment 01 initial checkin

--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,1 +1,9 @@
-<P>The Server Component is loaded</P>
+<div class="container"> 
+        <div class="row">
+          <div class="col-xs-12">
+              <div class="alert alert-success">
+                  <strong>Success!</strong> Indicates a successful or positive action.
+                </div>          
+          </div>  
+        </div>
+</div>
