--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -3,7 +3,15 @@
      <div class="col-xs-12">
        <h3>I'm in the component</h3>
        <hr>
+       <!-- load as an element -->
        <app-servers></app-servers>
+       
+       <!-- load as attribute -->
+       <!-- <div app-servers></div>  -->
+
+      <!-- Load as css -->
+      <!-- <div class="app-servers"></div> -->
+
      </div>
    </div>
 </div>
