--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,9 +1,7 @@
 <div class="container"> 
-        <div class="row">
-          <div class="col-xs-12">
-              <div class="alert alert-success">
-                  <strong>Success!</strong> Indicates a successful or positive action.
-                </div>          
-          </div>  
-        </div>
-</div>
+  <div class="row">
+    <div class="col-xs-12">
+        <p> {{'Server'}} with ID {{serverId}} is {{getServerStatus()}} 
+    </div>  
+  </div> 
+</div> 
