--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,4 +1,21 @@
-<p>
-  servers works!
-</p>
-<app-server></app-server>
+
+<label>Server Name</label>
+<input type="text" class="form-control" (input)="onUpdateServerName($event)">
+<input type="text" class="form-control" [(ngModel)]="serverName">
+<!-- <p>{{serverName}}</p> -->
+<div class="container"> 
+    <div class="row"> 
+      <div class="col-xs-12">
+        <button class="btn btn-primary" [disabled]="!allowNewServer"
+        (click)="onCreateServer()">Add Server </button> 
+        <!-- <p [innerText]="allowNewServer"></p> -->
+        <p>{{serverCreationStatus}}</p>
+        <app-server></app-server> 
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+          <app-server></app-server> 
+      </div>  
+    </div> 
+  </div> 
